code/zz_decl_bitfield_float.c.error
zz_decl_bitfield_float.c:13:11: error: bit-field 'x' has non-integral type 'float'
   13 |     float x:3;
      |           ^ ~
1 error generated.
